--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,6 +1,6 @@
 body{
-	background-color: hsl(0, 100%, 50%);
-
+	background-color: hsl(0, 0%, 98%);
+    
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -47,10 +47,11 @@ h1,h2,h3,h4,h5,h6{
 	color:#fff;
 	background-color: red;
 	width: 20px;
-	height: 25px;
+	height: 20px;
 	border-radius: 50%;
 	font-size: 14px;
     margin-right: 20px;
+    margin-top: 5px;
 }
 
 .col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
