Added user-authorization, detailed product page, wishlist logic

--- a/app/templates/app/cart.html
+++ b/app/templates/app/cart.html
@@ -45,5 +45,7 @@
                 </div>
                 {% endfor %}
         </div>
+        <br><br>
+        <h3>{{message}}</h3>
     </div>
 {% endblock content %}
