--- a/app/templates/app/product_detail.html
+++ b/app/templates/app/product_detail.html
@@ -8,7 +8,7 @@
 {% block content %}
 <div class="row">
     <div class="col-lg-6">
-        <img class="thumbnail" src="{{ product.imageURL }}">
+        <img class="thumbnail-detail" src="{{ product.imageURL }}">
     </div>
     <div class="col-lg-6">
         <div class="box-element">
