--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,9 @@
+
+/* <div class="col-lg-4">
+<img class="thumbnail" src="{{product.imageURL}}">
+<div class="box-element product"> */
+
+
 body{
 	background-color: hsl(0, 0%, 98%);
     
@@ -7,16 +13,26 @@ h1,h2,h3,h4,h5,h6{
 	color:hsl(0, 7%, 11%);
 }
 
+.box-element-app{
+	box-shadow:hsl(0, 1%, 28%) 0 0 16px;
+	background-color: #fff;
+	border-radius: 4px;
+	padding: 10px;
+	width: 282px;
+    height: 170px;
+}
+
 .box-element{
 	box-shadow:hsl(0, 1%, 28%) 0 0 16px;
 	background-color: #fff;
 	border-radius: 4px;
 	padding: 10px;
+
 }
 
 .thumbnail{
-	width: 100%;
-	height: 200px;
+	width: 282px;
+    height: 423px;
 	-webkit-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     -moz-box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
     box-shadow: -1px -3px 5px -2px rgba(214,214,214,1);
@@ -63,8 +79,8 @@ h1,h2,h3,h4,h5,h6{
     margin-top: 5px;
 }
 
-.col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
-	margin-top: 10px;
+.col-lg-3, .col-lg-4, .col-lg-6, .col-lg-8, .col-lg-12{
+	margin-top: 20px;
 }
 
 .btn{
