--- a/app/templates/app/product_detail.html
+++ b/app/templates/app/product_detail.html
@@ -1,17 +1,12 @@
-
-
-
-
 {% extends 'app/main.html' %}
 {% load static %}
-
 {% block content %}
 <div class="row">
     <div class="col-lg-6">
         <img class="thumbnail-detail" src="{{ product.imageURL }}">
     </div>
     <div class="col-lg-6">
-        <div class="box-element">
+        <div class="box-element-detail">
             <h2>{{ product.name }}</h2>
             <h4><strong>${{ product.price }}</strong></h4>
             <p>{{ product.description }}</p>
@@ -20,40 +15,28 @@
         </div>
     </div>
 </div>
+<br> <br>
+<h1 style="margin-left: 40px;">Related Products</h1>
+<!-- Додаємо карусель -->
+<div class="content">
+    <div class="slider multiple-items">
+        {% for product in all_products %}
+        <div class="slider-margin"><img src="{{ product.imageURL }}" alt="Image {{ forloop.counter }}"></div>
+        {% endfor %}
+    </div>
+</div>
 
-<div class="container mt-5">
-    <h3>Related Products</h3>
-    <div id="relatedProductsCarousel" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            {% for i in related_products|slice:":4" %}
-            <li data-target="#relatedProductsCarousel" data-slide-to="{{ forloop.counter0 }}" class="{% if forloop.first %}active{% endif %}"></li>
-            {% endfor %}
-        </ol>
-        <div class="carousel-inner">
-            {% for product in related_products %}
-                {% if forloop.counter0|divisibleby:4 %}
-                <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                    <div class="row">
-                {% endif %}
-                        <div class="col-md-3">
-                            <a href="{% url 'product_detail' product.id %}">
-                                <img src="{{ product.imageURL }}" alt="Image" style="max-width:100%;">
-                            </a>
-                        </div>
-                {% if forloop.counter0|add:"1"|divisibleby:4 or forloop.last %}
-                    </div>
-                </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-        <a class="carousel-control-prev" href="#relatedProductsCarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#relatedProductsCarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+<br> <br>
+<h1 style="margin-left: 40px;">Related Products</h1>
+<!-- Додаємо карусель -->
+<div class="content">
+    <div class="slider multiple-items">
+        {% for product in all_products %}
+        <div class="slider-margin"><img src="{{ product.imageURL }}" alt="Image {{ forloop.counter }}"></div>
+        {% endfor %}
     </div>
 </div>
 {% endblock content %}
+
+
+
