--- a/app/templates/app/login.html
+++ b/app/templates/app/login.html
@@ -1,8 +1,9 @@
+
 {% extends 'app/main.html' %}
 {% block content %}
 <div class="container">
     <h2>Login</h2>
-    <form method="POST">
+    <form method="POST" class="login-form">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Login</button>
