--- a/app/templates/app/register.html
+++ b/app/templates/app/register.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h2>Register</h2>
-    <form method="POST">
+    <form method="POST" class="register-form">
         {% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="btn btn-primary">Register</button>
