--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -56,6 +56,7 @@
               
                 {% if user.is_authenticated %}
                     <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
+                    <a href="{% url 'view_history' %}" class="btn btn-danger">Edit History</a>
                 {% else %}
                     <a href="{% url 'login' %}" class="btn btn-warning">Login</a>
                     <a href="{% url 'register' %}" class="btn btn-success">Register</a>
