--- a/app/templates/app/wishlist.html
+++ b/app/templates/app/wishlist.html
@@ -35,8 +35,21 @@
                     </div>
                 </div>
                 {% endfor %}
-
             </table>
+
+            {% if customer %}
+                {% if Is_history and Is_wishlist_items %}
+                <br> <br>
+                <h1 style="margin-left: 40px;">You might be interested in:</h1>
+                    <div class="content">
+                        <div class="slider multiple-items">
+                            {% for rec in recommendations %}
+                            <div class="slider-margin"><a href="{% url 'product_detail' rec.id %}"><img src="{{ rec.imageURL }}" alt="Image {{ forloop.counter }}"></a></div>
+                            {% endfor %}
+                        </div>
+                    </div>
+                {% endif %}
+            {% endif %}
         </div>
     </div>
 </div>
