--- a/app/templates/app/product_detail.html
+++ b/app/templates/app/product_detail.html
@@ -16,7 +16,7 @@
     </div>
 </div>
 <br> <br>
-<h1 style="margin-left: 40px;">Products with similar styles:</h1>
+<h3 style="margin-left: 40px; background-color: rgb(243, 193, 237);">Products with similar styles:</h3>
 <!-- Додаємо карусель -->
 <div class="content">
     <div class="slider multiple-items">
@@ -27,7 +27,7 @@
 </div>
 
 <br> <br>
-<h1 style="margin-left: 40px;">Similar Products:</h1>
+<h3 style="margin-left: 40px; background-color: rgb(243, 193, 237);">Similar Products:</h3>
 <!-- Додаємо карусель -->
 <div class="content">
     <div class="slider multiple-items">
@@ -39,7 +39,7 @@
 
 
 <br> <br>
-<h1 style="margin-left: 40px;">Other customers also buy::</h1>
+<h3 style="margin-left: 40px; background-color: rgb(243, 193, 237);">Other customers also buy:</h3>
 <!-- Додаємо карусель -->
 <div class="content">
     <div class="slider multiple-items">
