--- a/static/css/main.css
+++ b/static/css/main.css
@@ -103,6 +103,7 @@ h1,h2,h3,h4,h5,h6{
     padding-bottom: 10px;
     margin-bottom: 10px;
     border-bottom: 1px solid #222020;
+	
 
 }
 
@@ -259,4 +260,36 @@ form.register-form input[type="email"]:focus {
 
 .gallery-item-info {
     margin-top: 10px;
+}
+
+
+.wishlist-button{
+	width: 43px;
+	height: 45px;
+	margin-bottom: 10px;
+	text-decoration: none; /* Прибрати підкреслення */
+	margin-right: -5px;
+	
+}
+.history-button{
+	width: 43px;
+	height: 43px;
+	text-decoration: none; /* Прибрати підкреслення */
+	margin-right: 5px;
+
+	
+}
+
+.like-btn {
+    background-color: #f8d7e9; /* Блідо-рожевий колір */
+    border: 1px solid #f5c6cb; /* Відповідний колір рамки */
+    color: #721c24; /* Темний колір тексту */
+    transition: background-color 0.3s ease; /* Плавний перехід кольору */
+	
+}
+
+.like-btn:hover {
+    background-color: #f06292; /* Яскраво-рожевий колір при наведенні */
+    color: white; /* Колір тексту при наведенні */
+	border: 1px solid #f5c6cb; /* Відповідний колір рамки */
 }
