--- a/app/templates/app/main.html
+++ b/app/templates/app/main.html
@@ -56,12 +56,17 @@
               
                 {% if user.is_authenticated %}
                     <a href="{% url 'logout' %}" class="btn btn-danger">Logout</a>
-                    <a href="{% url 'view_history' %}" class="btn btn-danger">Edit History</a>
+                    <a href="{% url 'view_history' %}" class="history-button">
+                      <img src="{% static 'images/history.png' %}" alt="History" class="history-button">
+                    </a>
                 {% else %}
                     <a href="{% url 'login' %}" class="btn btn-warning">Login</a>
                     <a href="{% url 'register' %}" class="btn btn-success">Register</a>
                 {% endif %}
-                <a href="{% url 'wishlist' %}" class="btn btn-info">Wishlist</a>
+                <a href="{% url 'wishlist' %}"  class="wishlist-button">
+                  <img src="{% static 'images/wishlist.png' %}" alt="Wishlist" class="wishlist-button">
+                  
+                </a>
                 <a href="{% url 'cart' %}">
                 <img  id="cart-icon" src="{% static 'images/cart.png' %}">
             </a>
